--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@
 #  file-size-threshold: 2MB
 
 server.port = 9999
-spring.datasource.url = jdbc:mysql://localhost:3306/lakeside_hotel_db
+spring.datasource.url = jdbc:mysql://localhost:3306/food_order_online
 
 spring.datasource.username = root
 spring.datasource.password = 5596020494
