--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #  datasource:
 #  username: root
 #  password: 5596020494
-#  url: jdbc:mysql://localhost:3306/lakeside_hotel_db
+#  url: jdbc:mysql://localhost:3306/food_order_online
 #  driver-class-name: com.mysql.cj.jdbc.Driver
 #jpa:
 #  show-sql: true
